--- a/deployment/helmfile/releases/backend/cms/values-prod.yaml
+++ b/deployment/helmfile/releases/backend/cms/values-prod.yaml
@@ -1,10 +1,13 @@
 ingress:
+  annotations:
+    cert-manager.io/issuer: letsencrypt-prod
   tls:
-    - secretName: domain-tls
+    - secretName: api-findprice-by-tls
       hosts:
         - findprice.by
+    - secretName: admin-findprice-site-tls
+      hosts:
         - findprice.site
-
   hosts:
     - host: findprice.by
       paths:
