--- a/deployment/helmfile/10-application.yaml
+++ b/deployment/helmfile/10-application.yaml
@@ -4,6 +4,64 @@ commonLabels:
   tier: "app"
 
 releases:
+  # REDIS
+  - name: redis
+    namespace: {{ .Values.namespace }}
+    chart: bitnami/redis
+    version: 15.5.1
+    installed: {{ .Values.redis.enabled | toYaml }}
+    values:
+      - releases/redis/values.yaml
+      - releases/redis/values-{{ .Environment.Name }}.yaml
+
+  - name: redis-exporter
+    namespace: {{ .Values.namespace }}
+    chart: prometheus-community/prometheus-redis-exporter
+    installed: {{ .Values.monitoring.enabled | toYaml }}
+    version: 4.6.0
+    needs:
+      - prometheus-stack
+    values:
+      - releases/redis-exporter/values.yaml
+
+  # POSTGRES
+  - name: postgres
+    namespace: {{ .Values.namespace }}
+    chart: bitnami/postgresql
+    version: 10.3.0
+    installed: {{ .Values.postgres.enabled | toYaml }}
+    values:
+      - releases/postgres/values.yaml
+      - releases/postgres/values-{{ .Environment.Name }}.yaml
+      - postgresqlDatabase: {{ .Values.postgres.dbName | toYaml }}
+      - postgresqlUsername: {{ .Values.postgres.user | toYaml }}
+      - postgresqlPassword: {{ .Values.postgres.pass | toYaml }}
+
+  - name: postgres-exporter
+    namespace: {{ .Values.namespace }}
+    chart: prometheus-community/prometheus-postgres-exporter
+    installed: {{ .Values.monitoring.enabled | toYaml }}
+    version: 2.3.7
+    needs:
+      - prometheus-stack
+    values:
+      - releases/postgres-exporter/values.yaml
+      - config:
+          datasource:
+            host: {{ .Values.postgres.host | toYaml }}
+            user: {{ .Values.postgres.user | toYaml }}
+            password: {{ .Values.postgres.pass | toYaml }}
+            database: {{ .Values.postgres.dbName | toYaml }}
+            port: {{ .Values.postgres.port | toYaml }}
+
+  - name: cert-issuer
+    namespace: {{ .Values.namespace }}
+    chart: ../charts/cert-issuer
+    installed: {{ .Values.certManager.enabled | toYaml }}
+    values:
+      - releases/cert-issuer/values-{{ .Environment.Name }}.yaml
+
+  # Application
   - name: cms
     namespace: {{ .Values.namespace }}
     chart: ../charts/cms
@@ -20,6 +78,7 @@ releases:
           password: {{ .Values.postgres.pass }}
           host: {{ .Values.postgres.host }}
           port: {{ .Values.postgres.port }}
+      - secretKey: {{ .Values.app.cms.secretKey }}
 
   - name: worker-crawler
     namespace: {{ .Values.namespace }}
@@ -38,8 +97,6 @@ releases:
           password: {{ .Values.postgres.pass }}
           host: {{ .Values.postgres.host }}
           port: {{ .Values.postgres.port }}
-      - secretKey:
-          tag: {{ .Values.app.cms.secretKey }}
 
   - name: worker-etc
     namespace: {{ .Values.namespace }}
@@ -58,6 +115,7 @@ releases:
           host: {{ .Values.postgres.host }}
           port: {{ .Values.postgres.port }}
 
+  # Frontend
   - name: site
     namespace: {{ .Values.namespace }}
     chart: ../charts/site
