--- a/deployment/helmfile/releases/frontend/values-prod.yaml
+++ b/deployment/helmfile/releases/frontend/values-prod.yaml
@@ -1,5 +1,10 @@
 ingress:
-  enabled: true
+  annotations:
+    cert-manager.io/issuer: letsencrypt-prod
+  tls:
+    - secretName: site-findprice-by-tls
+      hosts:
+        - findprice.by
   hosts:
     - host: findprice.by
       paths:
