--- a/deployment/charts/cert-issuer/templates/issuer.yaml
+++ b/deployment/charts/cert-issuer/templates/issuer.yaml
@@ -1,7 +1,8 @@
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: letsencrypt-{{ .Release.Namespace }}
+  name: {{ .Values.name }}
+  namespace: {{ .Release.Namespace }}
 spec:
   acme:
     # You must replace this email address with your own.
@@ -12,7 +13,7 @@ spec:
     preferredChain: "ISRG Root X1"
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
-      name: {{ .Release.Namespace }}-issuer-account-key
+      name: {{ .Values.name }}-issuer-account-key
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
     - http01:
