--- a/deployment/helmfile/releases/frontend/values-prod.yaml
+++ b/deployment/helmfile/releases/frontend/values-prod.yaml
@@ -1,8 +1,6 @@
 ingress:
-  annotations:
-    cert-manager.io/issuer: letsencrypt-prod
   tls:
-    - secretName: site-findprice-by-tls
+    - secretName: findprice-by-tls
       hosts:
         - findprice.by
   hosts:
