--- a/deployment/helmfile/10-infra-app.yaml
+++ b/deployment/helmfile/10-infra-app.yaml
@@ -1,7 +1,7 @@
 {{ readFile "defaults.yaml" }}
 
 commonLabels:
-  tier: "app"
+  tier: "infra-app"
 
 releases:
   # REDIS
@@ -69,69 +69,3 @@ releases:
       - releases/certificates/values-{{ .Environment.Name }}.yaml
     needs:
       - cert-cluster-issuer
-
-  # Application
-  - name: cms
-    namespace: {{ .Values.namespace }}
-    chart: ../charts/cms
-    labels:
-      side: "backend"
-    values:
-      - releases/backend/cms/values.yaml
-      - releases/backend/cms/values-{{ .Environment.Name }}.yaml
-      - image:
-          tag: {{ .Values.app.backend }}
-      - postgres:
-          dbname: {{ .Values.postgres.dbName }}
-          username: {{ .Values.postgres.user }}
-          password: {{ .Values.postgres.pass }}
-          host: {{ .Values.postgres.host }}
-          port: {{ .Values.postgres.port }}
-      - secretKey: {{ .Values.app.cms.secretKey }}
-
-  - name: worker-crawler
-    namespace: {{ .Values.namespace }}
-    chart: ../charts/worker
-    labels:
-      side: "backend"
-    values:
-      - releases/backend/worker/values.yaml
-      - releases/backend/worker/values-crawler.yaml
-      - releases/backend/worker//values-{{ .Environment.Name }}.yaml
-      - image:
-          tag: {{ .Values.app.backend }}
-      - postgres:
-          dbname: {{ .Values.postgres.dbName }}
-          username: {{ .Values.postgres.user }}
-          password: {{ .Values.postgres.pass }}
-          host: {{ .Values.postgres.host }}
-          port: {{ .Values.postgres.port }}
-
-  - name: worker-etc
-    namespace: {{ .Values.namespace }}
-    chart: ../charts/worker
-    labels:
-      side: "backend"
-    values:
-      - releases/backend/worker/values.yaml
-      - releases/backend/worker/values-etc.yaml
-      - image:
-          tag: {{ .Values.app.backend }}
-      - postgres:
-          dbname: {{ .Values.postgres.dbName }}
-          username: {{ .Values.postgres.user }}
-          password: {{ .Values.postgres.pass }}
-          host: {{ .Values.postgres.host }}
-          port: {{ .Values.postgres.port }}
-
-  # Frontend
-  - name: site
-    namespace: {{ .Values.namespace }}
-    chart: ../charts/site
-    labels:
-      side: "frontend"
-    values:
-      - releases/frontend/values.yaml
-      - releases/frontend/values-{{ .Environment.Name }}.yaml
-      - image:
-          tag: {{ .Values.app.frontend }}
