Feature/site hosting (#70) #43

--- a/deployment/helmfile/00-infra.yaml
+++ b/deployment/helmfile/00-infra.yaml
@@ -29,52 +29,31 @@ releases:
           metrics:
             enabled: {{ .Values.monitoring.enabled | toYaml }}
 
-  # REDIS
-  - name: redis
-    namespace: default
-    chart: bitnami/redis
-    version: 15.5.1
-    installed: {{ .Values.redis.enabled | toYaml }}
+  # Certificates
+  - name: cert-manager
+    namespace: cert-manager
+    chart: jetstack/cert-manager
+    version: v1.6.1
+    installed: {{ .Values.certManager.enabled | toYaml }}
     values:
-      - releases/redis/values.yaml
-      - releases/redis/values-{{ .Environment.Name }}.yaml
+      - releases/cert-manager/values.yaml
+      - prometheus:
+          enabled: {{ .Values.monitoring.enabled | toYaml }}
 
-  - name: redis-exporter
+  - name: cert-issuer-backoffice
     namespace: monitoring
-    chart: prometheus-community/prometheus-redis-exporter
-    installed: {{ .Values.monitoring.enabled | toYaml }}
-    version: 4.6.0
+    chart: ../charts/cert-issuer
+    installed: {{ .Values.certManager.enabled | toYaml }}
+    values:
+      - releases/cert-issuer/values-backoffice-{{ .Environment.Name }}.yaml
     needs:
-      - prometheus-stack
-    values:
-      - releases/redis-exporter/values.yaml
+      - cert-manager
 
-  # POSTGRES
-  - name: postgres
-    namespace: default
-    chart: bitnami/postgresql
-    version: 10.3.0
-    installed: {{ .Values.postgres.enabled | toYaml }}
-    values:
-      - releases/postgres/values.yaml
-      - releases/postgres/values-{{ .Environment.Name }}.yaml
-      - postgresqlDatabase: {{ .Values.postgres.dbName | toYaml }}
-      - postgresqlUsername: {{ .Values.postgres.user | toYaml }}
-      - postgresqlPassword: {{ .Values.postgres.pass | toYaml }}
-
-  - name: postgres-exporter
+  - name: certificates-backoffice
     namespace: monitoring
-    chart: prometheus-community/prometheus-postgres-exporter
-    installed: {{ .Values.monitoring.enabled | toYaml }}
-    version: 2.3.7
-    needs:
-      - prometheus-stack
+    chart: ../charts/certificates
+    installed: {{ .Values.certManager.enabled | toYaml }}
     values:
-      - releases/postgres-exporter/values.yaml
-      - config:
-          datasource:
-            host: {{ .Values.postgres.host | toYaml }}
-            user: {{ .Values.postgres.user | toYaml }}
-            password: {{ .Values.postgres.pass | toYaml }}
-            database: {{ .Values.postgres.dbName | toYaml }}
-            port: {{ .Values.postgres.port | toYaml }}
+      - releases/certificates/values-backoffice-{{ .Environment.Name }}.yaml
+    needs:
+      - cert-cluster-issuer
