--- a/deployment/helmfile/releases/backend/cms/values-local.yaml
+++ b/deployment/helmfile/releases/backend/cms/values-local.yaml
@@ -8,3 +8,7 @@ ingress:
           pathType: Prefix
         - path: /api
           pathType: Prefix
+
+domain:
+  api: localhost
+  admin: localhost
