--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -44,5 +44,10 @@ jobs:
           POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
           GRAFANA_USER: ${{ secrets.GRAFANA_USER }}
           GRAFANA_PASS: ${{ secrets.GRAFANA_PASS }}
+          DJANGO_SECRET: ${{ secrets.DJANGO_SECRET }}
         run: |
           make validate
+          mkdir /home/runner/.kube
+          echo "${{ secrets.KUBECONFIG }}" > /home/runner/.kube/config
+          touch .env
+          make helmfile-prod ARGS=test
