--- a/deployment/charts/cms/templates/deployment.yaml
+++ b/deployment/charts/cms/templates/deployment.yaml
@@ -82,8 +82,12 @@ spec:
             - manage.py
             - migrate
           env:
+            - name: DOMAIN_API
+              value: {{ .Values.domain.api | quote }}
+            - name: DOMAIN_ADMIN
+              value: {{ .Values.domain.admin | quote }}
             - name: RQ_REDIS_URL
-              value: {{ .Values.redis.domain | quote }}
+              value: {{ .Values.redis.url | quote }}
             - name: DJANGO_CONFIGURATION
               value: {{ .Values.configuration | quote }}
             - name: DB_NAME
@@ -96,6 +100,8 @@ spec:
               value: {{ .Values.postgres.host | quote }}
             - name: DB_PORT
               value: {{ .Values.postgres.port | quote }}
+            - name: SECRET_KEY
+              value: {{ .Values.secretKey | quote }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
