--- a/deployment/helmfile/11-app.yaml
+++ b/deployment/helmfile/11-app.yaml
@@ -5,7 +5,7 @@ commonLabels:
 
 releases:
   - name: cms
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/cms
     labels:
       side: "backend"
@@ -20,15 +20,17 @@ releases:
           password: {{ .Values.postgres.pass }}
           host: {{ .Values.postgres.host }}
           port: {{ .Values.postgres.port }}
+      - secretKey: {{ .Values.app.cms.secretKey }}
 
   - name: worker-crawler
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/worker
     labels:
       side: "backend"
     values:
       - releases/backend/worker/values.yaml
       - releases/backend/worker/values-crawler.yaml
+      - releases/backend/worker//values-{{ .Environment.Name }}.yaml
       - image:
           tag: {{ .Values.app.backend }}
       - postgres:
@@ -39,7 +41,7 @@ releases:
           port: {{ .Values.postgres.port }}
 
   - name: worker-etc
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/worker
     labels:
       side: "backend"
@@ -55,8 +57,9 @@ releases:
           host: {{ .Values.postgres.host }}
           port: {{ .Values.postgres.port }}
 
+  # Frontend
   - name: site
-    namespace: default
+    namespace: {{ .Values.namespace }}
     chart: ../charts/site
     labels:
       side: "frontend"
