--- a/deployment/kind-config.yaml
+++ b/deployment/kind-config.yaml
@@ -24,3 +24,6 @@ nodes:
       - containerPort: 30102 # redis
         hostPort: 6379
         protocol: TCP
+      - containerPort: 30103 # elasticsearch
+        hostPort: 9200
+        protocol: TCP
