--- a/.github/workflows/deployment-ci.yaml
+++ b/.github/workflows/deployment-ci.yaml
@@ -50,4 +50,4 @@ jobs:
           mkdir /home/runner/.kube
           echo "${{ secrets.KUBECONFIG }}" > /home/runner/.kube/config
           touch .env
-          make helmfile-prod ARGS=test
+          make helmfile-prod ARGS=template
