Fix frontend deployment

--- a/deployment/helmfile/releases/prometheus-stack/values.yaml
+++ b/deployment/helmfile/releases/prometheus-stack/values.yaml
@@ -1,5 +1,14 @@
 metrics-server:
   enabled: true
+prometheus:
+  monitor:
+    enabled: false
+    additionalLabels: {}
+    namespace: ""
+    interval: ""
+    scrapeTimeout: ""
+    proxyUrl: ""
+    honorLabels: false
 
 prometheusOperator:
   resources:
