--- a/deployment/helmfile/releases/cert-issuer/values-prod.yaml
+++ b/deployment/helmfile/releases/cert-issuer/values-prod.yaml
@@ -1,3 +1,3 @@
 email: byprice24@gmail.com
-# server:  https://acme-v02.api.letsencrypt.org/directory
-server: https://acme-staging-v02.api.letsencrypt.org/directory
+server:  https://acme-v02.api.letsencrypt.org/directory
+# server: https://acme-staging-v02.api.letsencrypt.org/directory
