Add parsing cagetory of site

--- a/src/pytest.ini
+++ b/src/pytest.ini
@@ -2,7 +2,7 @@
 DJANGO_SETTINGS_MODULE = cms.settings
 DJANGO_CONFIGURATION = Test
 
-python_files = *_tests.py
+python_files = *tests.py
 
 [report]
 exclude_lines =
