--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies: [flake8-typing-imports==1.6.0]
-        args: [--ignore=W501, --max-line-length=150, --min-python-version=3.7]
+        args: [--ignore=W501, --ignore=E501, --max-line-length=150, --min-python-version=3.7]
 
   - repo: https://github.com/pre-commit/pre-commit
     rev: v2.6.0
