Cron job tuning

--- a/deployment/helmfile.yaml
+++ b/deployment/helmfile.yaml
@@ -1,7 +1,7 @@
 environments:
   local:
     values:
-      - ./helmfile/values-local.yaml
+      - ./helmfile/values-local.yaml.gotmpl
 
   prod:
     values:
