--- a/deployment/charts/worker/Chart.yaml
+++ b/deployment/charts/worker/Chart.yaml
@@ -4,3 +4,7 @@ description: A Helm chart for Kubernetes
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
+dependencies:
+  - name: cms-lib
+    version: 0.1.0
+    repository: "file://../cms-lib"
