--- a/deployment/charts/worker/templates/deployment.yaml
+++ b/deployment/charts/worker/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - python3
@@ -41,24 +41,7 @@ spec:
             - {{ $queue }}
 {{- end }}
           env:
-            - name: DJANGO_CONFIGURATION
-              value: {{ .Values.configuration | quote }}
-            - name: POD_IP
-              valueFrom:
-                fieldRef:
-                  fieldPath: status.podIP
-            - name: RQ_REDIS_URL
-              value: {{ .Values.redis.url | quote }}
-            - name: DB_NAME
-              value: {{ .Values.postgres.dbname | quote }}
-            - name: DB_USERNAME
-              value: {{ .Values.postgres.username | quote }}
-            - name: DB_PASSWORD
-              value: {{ .Values.postgres.password | quote }}
-            - name: DB_HOST
-              value: {{ .Values.postgres.host | quote }}
-            - name: DB_PORT
-              value: {{ .Values.postgres.port | quote }}
+            {{- include "cms-lib.env" . | nindent 12 }}
           ports:
             - name: http
               containerPort: 8080
