--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,8 @@ psycopg2-binary = "2.9.1"
 hiredis = "2.0.0"
 Scrapy = "2.5.1"
 extruct = "0.13.0"
+elasticsearch = "*"
+pytz = '1.6.2'
 
 [dev-packages]
 pytest = "6.2.5"
