--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,8 @@ pytz = '==2021.3'
 pytest = "==6.2.5"
 pytest-cov = "==3.0.0"
 pytest-django = "==4.5.2"
-coverage = "==6.2.0"
+coverage = "==6.2"
+parameterized = "==0.8.1"
 
 [requires]
 python_version = "3.10.0"
