--- a/deployment/charts/cms/templates/deployment.yaml
+++ b/deployment/charts/cms/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: cms
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -64,6 +64,19 @@ spec:
             - python3
             - manage.py
             - migrate
+          env:
+            {{- include "cms-lib.env" . | nindent 12 }}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+        - name: prepare-index
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          args:
+            - python3
+            - manage.py
+            - prepare_index
           env:
             {{- include "cms-lib.env" . | nindent 12 }}
           resources:
