--- a/deployment/helmfile/releases/backend/cms/values.yaml
+++ b/deployment/helmfile/releases/backend/cms/values.yaml
@@ -5,4 +5,4 @@ redis:
   url: "redis://redis-master:6379/0"
 
 elasticsearch:
-  url: "es://elasticsearch-master:9200/0"
+  url: "es://elasticsearch-master:9200/"
