--- a/deployment/charts/cms/templates/schedule-scraping.yaml
+++ b/deployment/charts/cms/templates/schedule-scraping.yaml
@@ -28,7 +28,7 @@ spec:
           securityContext:
             {{- toYaml .Values.podSecurityContext | nindent 12 }}
           containers:
-            - name: {{ .Chart.Name }}
+            - name: schedule-scraping
               securityContext:
                 {{- toYaml .Values.securityContext | nindent 16 }}
               image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
