--- a/fixtures/prod/markets.yaml
+++ b/fixtures/prod/markets.yaml
@@ -4,6 +4,7 @@
     domain: www.21vek.by
     logo_url: https://www.21vek.by/img/up/logo_21vek.by.png
 - model: crawler.scrapingstate
+  pk: 1
   fields:
     marketplace: 1
 
@@ -13,5 +14,16 @@
     domain: www.ilp.by
     logo_url: https://userimages.shopmanager.by/3100630/ilp-logo.png
 - model: crawler.scrapingstate
+  pk: 2
   fields:
     marketplace: 2
+
+- model: marketplace.marketplace
+  pk: 3
+  fields:
+    domain: www.amd.by
+    logo_url: https://www.amd.by/image/catalog/img/logo1.png
+- model: crawler.scrapingstate
+  pk: 3
+  fields:
+    marketplace: 3
