--- a/deployment/charts/cms/templates/schedule-scraping.yaml
+++ b/deployment/charts/cms/templates/schedule-scraping.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ include "cms.fullname" . }}
+  name: {{ include "cms.fullname" . }}-schdule-scraping
   labels:
     {{- include "cms.labels" . | nindent 4 }}
 spec:
@@ -28,10 +28,10 @@ spec:
           securityContext:
             {{- toYaml .Values.podSecurityContext | nindent 12 }}
           containers:
-            - name: {{ .Chart.Name }}
+            - name: schedule-scraping
               securityContext:
                 {{- toYaml .Values.securityContext | nindent 16 }}
-              image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+              image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
               imagePullPolicy: {{ .Values.image.pullPolicy }}
               args:
                 - python3
@@ -41,21 +41,4 @@ spec:
                 - --force
                 {{- end }}
               env:
-                - name: DJANGO_CONFIGURATION
-                  value: {{ .Values.configuration | quote }}
-                - name: POD_IP
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: status.podIP
-                - name: RQ_REDIS_URL
-                  value: {{ .Values.redis.url | quote }}
-                - name: DB_NAME
-                  value: {{ .Values.postgres.dbname | quote }}
-                - name: DB_USERNAME
-                  value: {{ .Values.postgres.username | quote }}
-                - name: DB_PASSWORD
-                  value: {{ .Values.postgres.password | quote }}
-                - name: DB_HOST
-                  value: {{ .Values.postgres.host | quote }}
-                - name: DB_PORT
-                  value: {{ .Values.postgres.port | quote }}
+                {{- include "cms-lib.env" . | nindent 16 }}
