Add www domain and set requests and limits for resources #89 #65

--- a/deployment/charts/certificates/templates/certificates.yaml
+++ b/deployment/charts/certificates/templates/certificates.yaml
@@ -8,7 +8,9 @@ metadata:
 spec:
   secretName: {{ .secretName }}
   dnsNames:
-    - {{ .dnsName }}
+{{- range $dnsName := .dnsNames | required "dnsNames is not defined"}}
+    - {{ $dnsName }}
+{{- end }}
   usages:
     - digital signature
     - key encipherment
