--- a/deployment/helmfile/releases/frontend/values.yaml
+++ b/deployment/helmfile/releases/frontend/values.yaml
@@ -1,3 +1,11 @@
+resources:
+  requests:
+    cpu: "100m"
+    memory: "50Mi"
+  limits:
+    cpu: "100m"
+    memory: "50Mi"
+
 ingress:
   enabled: true
   hosts:
