--- a/deployment/helmfile/releases/redis/values.yaml
+++ b/deployment/helmfile/releases/redis/values.yaml
@@ -16,3 +16,24 @@ serviceAccount:
 master:
   persistence:
     enabled: false
+
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "100Mi"
+    limits:
+      cpu: "100m"
+      memory: "100Mi"
+
+
+replica:
+  persistence:
+    enabled: false
+
+  resources:
+    requests:
+      cpu: "100m"
+      memory: "100Mi"
+    limits:
+      cpu: "100m"
+      memory: "100Mi"
