--- a/deployment/helmfile/00-infra.yaml
+++ b/deployment/helmfile/00-infra.yaml
@@ -16,6 +16,11 @@ releases:
           adminUser: {{ .Values.monitoring.grafana.user | toYaml }}
           adminPassword: {{ .Values.monitoring.grafana.pass | toYaml }}
 
+  - name: alerts-k8s
+    namespace: monitoring
+    chart: ../charts/alerts-k8s
+    installed: {{ .Values.monitoring.enabled | toYaml }}
+
   - name: ingress-nginx
     namespace: kube-system
     chart: ingress-nginx/ingress-nginx
