--- a/deployment/helmfile/releases/prometheus-stack/values-prod.yaml
+++ b/deployment/helmfile/releases/prometheus-stack/values-prod.yaml
@@ -4,12 +4,15 @@ prometheus:
     routePrefix: "/prometheus"
 
   ingress:
+    annotations:
+      nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
     tls:
       - secretName: findprice-site-tls
         hosts:
           - findprice.site
+          - www.findprice.site
     hosts:
-      - findprice.site
+      - www.findprice.site
     pathType: Prefix
     paths:
       - "/prometheus(/|$)(.*)"
@@ -18,13 +21,15 @@ prometheus:
 alertmanager:
   ingress:
     annotations:
+      nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
       nginx.ingress.kubernetes.io/rewrite-target: /$2
     tls:
       - secretName: findprice-site-tls
         hosts:
           - findprice.site
+          - www.findprice.site
     hosts:
-      - findprice.site
+      - www.findprice.site
     pathType: Prefix
     paths:
       - "/alertmanager(/|$)(.*)"
@@ -33,18 +38,20 @@ alertmanager:
 grafana:
   grafana.ini:
     server:
-      domain: findprice.site
+      domain: www.findprice.site
       root_url: https://findprice.site:1080/grafana/
       serve_from_sub_path: true
 
   ingress:
     annotations:
+      nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
       nginx.ingress.kubernetes.io/rewrite-target: /$2
     tls:
       - secretName: findprice-site-tls
         hosts:
           - findprice.site
+          - www.findprice.site
     hosts:
-      - findprice.site
+      - www.findprice.site
     pathType: Prefix
     path: "/grafana(/|$)(.*)"
