--- a/deployment/helmfile/releases/redis-exporter/values.yaml
+++ b/deployment/helmfile/releases/redis-exporter/values.yaml
@@ -1,3 +1,11 @@
-redisAddress: redis://redis-master.default.svc:6379
+redisAddress: redis://redis-master:6379
 serviceMonitor:
   enabled: true
+
+resources:
+  requests:
+    cpu: "25m"
+    memory: "50Mi"
+  limits:
+    cpu: "50m"
+    memory: "50Mi"
