--- a/deployment/helmfile/releases/ingress-nginx/values.yaml
+++ b/deployment/helmfile/releases/ingress-nginx/values.yaml
@@ -18,3 +18,10 @@ controller:
 
   updateStrategy:
     type: Recreate
+
+  resources:
+    limits:
+      memory: 256Mi
+    requests:
+      cpu: 100m
+      memory: 256Mi
