--- a/deployment/charts/cms/templates/build-index.yaml
+++ b/deployment/charts/cms/templates/build-index.yaml
@@ -41,3 +41,5 @@ spec:
                 - -f
               env:
                 {{- include "cms-lib.env" . | nindent 16 }}
+              resources:
+                {{- toYaml .Values.resources | nindent 12 }}
