--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -41,7 +41,7 @@ services:
       - "5432:5432"
 
   elasticsearch01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.1
+    image: bitnami/elasticsearch:7.16.2
     container_name: dc-elasticsearch01
     # network_mode: host
     environment:
