--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "atomize": "^1.0.28",
     "axios": "^0.24.0",
+    "fusion-plugin-styletron-react": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
+    "react-transition-group": "^4.4.2",
+    "styletron-react": "^6.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
