--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ extruct = "==0.13.0"
 elasticsearch = "==7.16.1"
 elasticsearch-dsl = "==7.4.0"
 pytz = '==2021.3'
+sentry-sdk = "*"
 
 [dev-packages]
 pytest = "==6.2.5"
