--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ psycopg2-binary = "2.9.1"
 hiredis = "2.0.0"
 Scrapy = "2.5.1"
 extruct = "0.13.0"
-crontab = "*"
+croniter = "1.1.0"
 
 [dev-packages]
 pytest = "6.2.5"
