--- a/fixtures/prod/markets.yaml
+++ b/fixtures/prod/markets.yaml
@@ -1,3 +1,4 @@
+
 - model: marketplace.marketplace
   pk: 1
   fields:
@@ -37,3 +38,14 @@
   pk: 4
   fields:
     marketplace: 4
+
+
+- model: marketplace.marketplace
+  pk: 5
+  fields:
+    domain: www.ozon.ru
+    logo_url: https://cdn1.ozone.ru/s3/cms/05/t8f/wc200/doodle_1.pnggit
+- model: crawler.scrapingstate
+  pk: 5
+  fields:
+    marketplace: 5
