--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-paginate": "^8.1.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.2",
@@ -29,7 +30,7 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "eslint-fix": "eslint './**/*.{js,jsx}' --fix"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "http://0.0.0.0:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
