--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-paginate": "^8.1.0",
+    "react-pagination": "^1.0.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "react-transition-group": "^4.4.2",
