--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "eslint": "eslint './**/*.{js,jsx}'",
     "eslint-fix": "eslint './**/*.{js,jsx}' --fix"
   },
-  "proxy": "http://0.0.0.0:8080",
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
